[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/back_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/change_scene_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=4]
[ext_resource path="res://src/screens/settings_page/change_account/change_account_details.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -270.785
margin_right = 279.0
margin_bottom = -211.785
custom_fonts/font = SubResource( 1 )
text = "Change Account Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.244, 0.244 )
scene_path = "res://src/screens/settings_page/settings.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -141.49
margin_right = 178.0
margin_bottom = 214.51
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change_name" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 356.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change Name"
scene_path = "res://src/screens/settings_page/change_account/change_name/change_name.tscn"

[node name="change_scene_button2" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 356.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change Password"
scene_path = "res://src/screens/settings_page/change_account/change_password/change_password.tscn"

[node name="rest_data" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 180.0
margin_right = 356.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset Data"

[node name="log_out" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 270.0
margin_right = 356.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Log Out"
script = null

[node name="reset_data_request" type="HTTPRequest" parent="."]
[connection signal="button_up" from="VBoxContainer/rest_data" to="." method="_on_rest_data_button_up"]
[connection signal="button_up" from="VBoxContainer/log_out" to="." method="_on_log_out_button_up"]
[connection signal="request_completed" from="reset_data_request" to="." method="_on_reset_data_request_request_completed"]
